--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,6 @@
 ../GitHubCode/datafiles/O6_Africa.dat filter=lfs diff=lfs merge=lfs -text
 datafiles/O5_Africa.dat filter=lfs diff=lfs merge=lfs -text
 datafiles/O6_Africa.dat filter=lfs diff=lfs merge=lfs -text
+datafiles/*.dat filter=lfs diff=lfs merge=lfs -text
+datafiles/O5_Africa_fixed_binary.dat filter=lfs diff=lfs merge=lfs -text
+datafiles/O6_Africa_fixed_binary.dat filter=lfs diff=lfs merge=lfs -text
